Remove youtube-dl dependency and simplify codebase
- Remove youtube-dl from requirements.txt
- Remove youtube-dl fallback logic from fetcher.py
- Simplify downloader selection to only use yt-dlp
- Update argument parser to only allow yt-dlp
- Fix code quality issues (formatting, imports, type annotations)
- All tests passing
- CI/CD pipeline should now work properly

--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Update requirements.txt
         run: |
           # Create a temporary requirements file with latest versions
-          pip install --upgrade yt-dlp youtube-dl
-          pip freeze | grep -E "(yt-dlp|youtube-dl)" > requirements_latest.txt
+                  pip install --upgrade yt-dlp
+        pip freeze | grep -E "(yt-dlp)" > requirements_latest.txt
           
           echo "Current requirements:"
           cat requirements.txt
